.pants.d/workdir/run-tracker/pants_run_2024_08_14_20_12_45_260_1600705a3a094a44be8054b94b4b24d8/logs
20:12:45.31 [31m[ERROR][0m 1 Exception encountered:

Engine traceback:
  in `test` goal

BuildFileSyntaxError: Error parsing BUILD file src/tests/dir/subdir/BUILD:6: EOL while scanning string literal
  files(name="csv_files", sources=["src/tests/test_data/csv/*.csv])
                                                                   ^

